--- a/index.html
+++ b/index.html
@@ -486,6 +486,54 @@
         gap: 2px;
       }
 
+      @media (max-width: 600px) {
+        .container {
+          padding-left: 0;
+          padding-right: 0;
+        }
+        .form-container {
+          max-width: 100vw;
+          margin: 10px 0;
+          border-radius: 0;
+        }
+        .profile-header {
+          flex-direction: column;
+          gap: 16px;
+          text-align: center;
+          padding: 10px 4vw;
+        }
+        .profile-info h1 {
+          font-size: 1.2rem;
+        }
+        .profile-stats {
+          gap: 10px;
+        }
+        .profile-posts {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 2px;
+          padding: 0;
+        }
+        .profile-post {
+          border-radius: 0;
+        }
+        .modal-content {
+          width: 98vw;
+          max-width: 98vw;
+          padding: 8px;
+        }
+        .post-detail {
+          flex-direction: column !important;
+        }
+        .post-detail-image {
+          width: 100% !important;
+          max-height: 220px !important;
+        }
+        .post-detail-content {
+          width: 100% !important;
+          padding: 8px;
+        }
+      }
+
       .profile-post {
         aspect-ratio: 1/1;
         overflow: hidden;
@@ -604,24 +652,45 @@
       }
 
       .chat-header {
-        padding: 15px;
+        padding: 15px 20px 15px 15px;
         border-bottom: 1px solid var(--border);
         display: flex;
         justify-content: space-between;
         align-items: center;
         background-color: var(--bg-primary);
-      }
-
-      .chat-title {
-        font-weight: bold;
-        font-size: 1.1rem;
+        position: relative;
+        z-index: 2;
       }
 
       .chat-close {
-        background: none;
-        border: none;
-        font-size: 1.2rem;
-        color: var(--text-primary);
+        background: #fff;
+        border-radius: 50%;
+        border: 2px solid #ccc;
+        font-size: 1.4rem;
+        color: #222;
+        z-index: 100;
+        padding: 7px 14px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background 0.2s, border 0.2s;
+        min-width: 38px;
+        min-height: 38px;
+        margin-right: 8px;
+        position: static;
+        margin-top: 64px;
+      }
+      .chat-close:hover {
+        background: #f5f5f5;
+        border: 2px solid #888;
+      }
+      @media (max-width: 600px) {
+        .chat-close {
+          font-size: 2.3rem;
+          padding: 10px 18px;
+        }
       }
 
       .chat-users {
